--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.17",
@@ -31,8 +32,10 @@
     "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
