--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@capacitor-firebase/authentication": "^6.3.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
@@ -36,6 +37,7 @@
     "react": "18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.76.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
